# itmo_parsat

./: .bazelignore  .bazelproject  .bazelrc  .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  WORKSPACE  backdoor.txt  config.pb.cc  d  find-backdoor-trees  heuristic.txt  log-ea-0.txt  proof.txt  r.sh  run-notree  run.sh  setup.sh  update_proto.sh
cli/: BUILD  CMakeLists.txt
cli/infra/: main.cpp
cli/rb_search/: main.cpp
cli/solve/: CliConfig.cpp  CliConfig.h  main.cpp
cli/verify/: main.cpp
core/: BUILD  CMakeLists.txt  types.h
core/domain/: Assignment.cpp  Assignment.h  BUILD  SearchSpace.cpp  SearchSpace.h  VarView.cpp  VarView.h  Vars.cpp  Vars.h
core/domain/assignment/: Assignment.cpp  Assignment.h  AssignmentModifier.cpp  AssignmentModifier.h  CartesianSearch.cpp  CartesianSearch.h  CustomSearch.cpp  CustomSearch.h  FullSearch.cpp  FullSearch.h  ModifierAssignment.cpp  ModifierAssignment.h  ModifyingSearch.cpp  ModifyingSearch.h  RandomSearch.cpp  RandomSearch.h  Search.cpp  Search.h  SplittableSearch.cpp  SplittableSearch.h  TrackAssignments.h  UniqueSearch.cpp  UniqueSearch.h
core/domain/assignment/test/: unit_search.cpp
core/evol/algorithm/: Algorithm.cpp  Algorithm.h  EAAlgorithm.cpp  EAAlgorithm.h  GAAlgorithm.cpp  GAAlgorithm.h
core/evol/algorithm/test/: bench_algorithm.cpp  unit_algorithm.cpp
core/evol/instance/: Fitness.cpp  Fitness.h  Instance.cpp  Instance.h  SharedData.cpp  SharedData.h
core/evol/limit/: ConjLimit.cpp  ConjLimit.h  FitnessLimit.cpp  FitnessLimit.h  Limit.cpp  Limit.h  PointsLimit.cpp  PointsLimit.h  ResourceLimit.cpp  ResourceLimit.h  StallLimit.cpp  StallLimit.h
core/evol/method/cross/: Crossover.h  OnePointCrossover.cpp  OnePointCrossover.h  TwoPointCrossover.cpp  TwoPointCrossover.h
core/evol/method/mutate/: DoerrMutation.cpp  DoerrMutation.h  Mutation.h  UniformMutation.cpp  UniformMutation.h
core/evol/method/preprocess/: Preprocess.cpp  Preprocess.h
core/evol/method/select/: BestSelector.cpp  BestSelector.h  Selector.h
core/proto/: BUILD  CMakeLists.txt  config.pb.cc  config.pb.h  logging_config.pb.cc  logging_config.pb.h  logging_config.proto  solve_config.pb.cc  solve_config.pb.h  solve_config.proto
core/sat/: BUILD  CMakeLists.txt  ParSolver.cpp  ParSolver.h  Problem.cpp  Problem.h  SimpBase.cpp  SimpBase.h  SimpSolver.cpp  SimpSolver.h  Solver.cpp  Solver.h
core/sat/hordesat/: makehordesat.sh
core/sat/hordesat/hordesat-src/: Makefile  hordesat.cpp
core/sat/hordesat/hordesat-src/sharing/: AllToAllSharingManager.cpp  AllToAllSharingManager.h  LogSharingManager.cpp  LogSharingManager.h  SharingManagerInterface.h
core/sat/hordesat/lingeling/: lglcfg.h  lglcflags.h  lingeling
core/sat/lingeling/: CMakeLists.txt  lglcfg.h  lglcflags.h
core/sat/minisat/: .gitignore  BUILD
core/sat/native/hordesat/: CMakeLists.txt
core/sat/native/lingeling/: CMakeLists.txt  lgldimacs.h  lglib.h  lingeling
core/sat/native/mini/: CMakeLists.txt
core/sat/native/minisat/: .travis.yml  CMakeLists.txt
core/sat/native/painless/: CMakeLists.txt  Makefile  painless.cpp  painless.h
core/sat/prop/: ParProp.cpp  ParProp.h  Prop.cpp  Prop.h  SimpProp.cpp  SimpProp.h
core/sat/prop/test/: bench_propagation.cpp  unit_propagation.cpp
core/sat/sharing/: Shareable.cpp  Shareable.h  Sharing.cpp  Sharing.h
core/sat/solver/: HordeSatSolver.cpp  HordeSatSolver.h  LingelingSolver.cpp  LingelingSolver.h  MapleCOMSPSSolver.cpp  MapleCOMSPSSolver.h  PainlessSolver.cpp  PainlessSolver.h  ParSolver.cpp  ParSolver.h  SimpSolver.cpp  SimpSolver.h  Solver.cpp  Solver.h
core/sat/solver/sequential/: LMapleSolver.cpp  LMapleSolver.h  LingelingSolver.cpp  LingelingSolver.h  MapleCOMSPSSolver.cpp  MapleCOMSPSSolver.h  PainlessSolver.cpp  PainlessSolver.h  SimpSolver.cpp  SimpSolver.h  Solver.cpp  Solver.h
core/sat/solver/service/: SequentialSolverService.cpp  SequentialSolverService.h  SolverService.cpp  SolverService.h
core/search/: AssignmentModifier.cpp  AssignmentModifier.h  CartesianSearch.cpp  CartesianSearch.h  FullSearch.cpp  FullSearch.h  RandomSearch.cpp  RandomSearch.h  Search.cpp  Search.h  UniqueSearch.cpp  UniqueSearch.h
core/search/test/: unit_search.cpp
core/solve/: NaiveSolve.cpp  NaiveSolve.h  ParRBSSolve.cpp  ParRBSSolve.h  PortfolioSolve.cpp  PortfolioSolve.h  RBSSolve.cpp  RBSSolve.h  RBSSolveBase.cpp  RBSSolveBase.h  RecurringRBSSolve.cpp  RecurringRBSSolve.h  SBSSolve.cpp  SBSSolve.h  Solve.cpp  Solve.h  WithPainlessSolve.cpp  WithPainlessSolve.h
core/solve/rbs/: CartesianRBSearch.cpp  CartesianRBSearch.h  OneRBSearch.cpp  OneRBSearch.h  RBSearch.cpp  RBSearch.h
core/solve/reduce/: RecurringReduceSolve.cpp  RecurringReduceSolve.h  ReduceSolve.cpp  ReduceSolve.h  SingleReduceSolve.cpp  SingleReduceSolve.h
core/tests/: CMakeLists.txt  TestAssignment.cpp  TestRandom.cpp  TestUP.cpp  test.cpp
core/tests/bench/: CMakeLists.txt  bench_propagation.cpp
core/tests/common/: generate.cpp  generate.h  get.cpp  get.h  inputs.cpp  inputs.h  paths.cpp  paths.h  util.cpp  util.h
core/tests/resources/: ea.json  ea_bench.json  ea_inf.json  ea_prod.json  ea_unit.json  ga_inf.json  ga_prod.json  ga_unit.json  lmaple_service_1.json  lmaple_service_16.json  lmaple_service_16s.json  lmaple_solver.json  log.json  maple_service_1.json  maple_service_16.json  maple_service_16s.json  maple_solver.json  painless_service_1.json  painless_service_4.json  painless_service_4s.json  painless_solver.json  par_prop.json  preprocess.json  simp_service_1.json  simp_service_16.json  simp_solver.json
core/tests/unit/: CMakeLists.txt  unit_propagation.cpp  unit_random.cpp
core/util/: BUILD  Cache.h  CliConfig.cpp  CliConfig.h  EventHandler.cpp  EventHandler.h  Generator.cpp  Generator.h  GzFile.cpp  GzFile.h  LRUCache.h  Logger.cpp  Logger.h  Reference.h  Registry.h  SigHandler.cpp  SigHandler.h  Tracer.cpp  Tracer.h  WorkerPool.h  assert.cpp  assert.h  random.cpp  random.h  signals.cpp  signals.h  stream.cpp  stream.h
evol/: BUILD
util/proto/: CMakeLists.txt  logging_config.proto
(+3216 files in other folders)
